# FWanda

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: llama2_13b.yaml  llama2_7b.yaml  smoke_tiny.yaml  sparsity_2_4.yaml  sparsity_50.yaml  sparsity_60.yaml
fwanda/: __init__.py  prune.py
fwanda/data/: __init__.py  calibration.py
fwanda/eval/: __init__.py  mmlu.py  perplexity.py  zero_shot.py
fwanda/methods/: __init__.py  fsparsegpt.py  fwanda.py  magnitude.py  sparsegpt.py  wanda.py
fwanda/utils/: __init__.py  layerwrapper.py  logging_utils.py  model_loader.py  sparsity.py
paper/: compare_exp_vs_ac.py  exp_values.md  generate_figures.py  generate_tables.py  layer_breakdown.py  method_comparison.md  plot_cost_vs_quality.py
paper/selva2026/: README.md  SUBMISSION_CHECKLIST.md  main.tex  references.bib
results/tables/: main_results.csv  smoke.csv
results/tables/exp/: ablation_calib_size.csv  ablation_fisher_variants.csv  baseline_sparsegpt.csv  baseline_wanda.csv  compute_cost.csv  main_results.csv
scripts/: _env.sh  eval_pruned_model.sh  run_baseline_sparsegpt.sh  run_baseline_wanda.sh  run_full_grid.sh  run_fwanda.sh  run_one.sh  smoke_test.sh
scripts/ablations/: ablation_calibration_size.sh  ablation_fisher_variants.sh  ablation_layer_breakdown.sh
tests/: test_calibration.py  test_fwanda_scores.py  test_sparsity_patterns.py
