[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwanda"
version = "0.1.0"
description = "F-Wanda: Fisher-Reweighted Post-Training Pruning for LLMs (SELVA workshop)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anonymous Authors" }]
license = { text = "MIT" }
keywords = ["pruning", "sparsity", "wanda", "fisher", "llm", "post-training"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0,<4.50.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
    "safetensors>=0.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
eval = ["lm-eval==0.4.2"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
fwanda-prune = "fwanda.prune:cli"

[tool.setuptools.packages.find]
include = ["fwanda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
